# evaluatorq

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  docs.yml  label-pr.yml  release.yml
.superpowers/sdd/: task-4-report.md
docs/: cli-reference.md  configuration.md  custom-evaluators-and-frameworks.md  dashboard.md  gen_pages.py  index.md  llm-as-a-jury.md  orq-deployment.md  redteam-dashboard-only-views.md  tracing.md
docs/guides/: agent-simulation-openai.md  agent-simulation.md  getting-started.md  red-teaming-openai.md  red-teaming.md
docs/js/: keyboard.js
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-06-21-evaluatorq-docs-site.md  2026-06-23-docs-spice-up-implementation.md
docs/superpowers/specs/: 2026-06-20-evaluatorq-docs-site-design.md
examples/: agent_simulation_intro.ipynb
examples/agent_simulation/: 01_basic_simulation.py  02_orq_deployment_simulation.py  03_tool_simulation.py
examples/redteam/: 16_llm_as_a_jury.py
overrides/: main.html
scratchpad/: pr15-body.md
scripts/: simulation_live_test.py  simulation_tracing_smoke.py  smoke_examples.py  validate_mermaid.py
src/evaluatorq/: __init__.py  cli.py  contracts.py  evaluatorq.py  fetch_data.py  llm_jury.py  send_results.py  types.py
src/evaluatorq/common/: judge.py  jury.py  llm_call.py  llm_client.py  messages.py  run_store_dir.py
src/evaluatorq/common/reports/: __init__.py  console.py  html_helpers.py  render.py  report.css  rich_styles.py  vega.py
src/evaluatorq/dashboard/: _compat.py  app.py  filter_request.py  filters.py  launch.py  library.py  metrics.py  redteam_charts.py  redteam_transcripts.py  redteam_views.py  report_tabs.py  shell.py  sim_views.py  styles.py  surfaces.py  theme.py  view.py
src/evaluatorq/dashboard/static/: dashboard.js
src/evaluatorq/integrations/: __init__.py
src/evaluatorq/integrations/callable_integration/: __init__.py  target.py
src/evaluatorq/integrations/crewai_integration/: target.py
src/evaluatorq/integrations/langchain_integration/: __init__.py
src/evaluatorq/integrations/langgraph_integration/: __init__.py  target.py
src/evaluatorq/integrations/openai_agents_integration/: __init__.py  target.py
src/evaluatorq/integrations/pydantic_ai_integration/: target.py
src/evaluatorq/integrations/vercel_ai_sdk_integration/: __init__.py  target.py
src/evaluatorq/openresponses/: convert_models.py  target.py  types.py
src/evaluatorq/redteam/: __init__.py  cli.py  runner.py
src/evaluatorq/redteam/adaptive/: __init__.py
src/evaluatorq/redteam/backends/: orq.py
src/evaluatorq/redteam/reports/: __init__.py  _utils.py  converters.py  display.py  export_html.py  sections.py
src/evaluatorq/redteam/ui/: dashboard.py
src/evaluatorq/simulation/: README.md  __init__.py  _datapoint_io.py  adapters.py  api.py  cli.py  convert.py  hooks.py  types.py  wrap_agent.py
src/evaluatorq/simulation/agents/: base.py
src/evaluatorq/simulation/generators/: datapoint_generator.py  persona_generator.py  scenario_generator.py
src/evaluatorq/simulation/reports/: __init__.py  display.py  export_html.py  sections.py
src/evaluatorq/simulation/runner/: simulation.py
src/evaluatorq/simulation/utils/: dataset_export.py  prompt_builders.py  run_store.py
tests/: conftest.py  test_cli_version.py  test_evaluatorq_base_url.py  test_main_module.py  test_send_results.py
tests/common/: test_console_helpers.py  test_jury.py  test_llm_client.py  test_messages.py  test_reports_html_helpers.py  test_rich_styles.py  test_run_store_dir.py  test_sanitize.py
tests/common/reports/: test_html_helpers.py  test_vega.py
tests/contracts/: test_message_multimodal.py  test_message_to_chat_completion.py
tests/dashboard/: test_chrome_security.py  test_downloads.py  test_filter.py  test_fixes.py  test_integration.py  test_landing.py  test_launch.py  test_library.py  test_redteam_overview.py  test_redteam_views.py  test_report_body.py  test_report_tabs.py  test_routes.py  test_sim_overview.py  test_sim_transcript.py  test_vega_reinit.py
tests/integration/: test_callable_integration.py  test_orq_responses_target_integration.py
tests/integrations/: test_respond_smoke.py
tests/openresponses/: test_multimodal_content.py
tests/redteam/: test_export_html_charts.py  test_judge.py  test_orchestrator_coverage.py  test_orq_tool_enrichment.py  test_send_cleaned_results.py
tests/redteam/e2e/: conftest.py
tests/redteam/reports/: test_export_regression.py  test_rebuild_filtered.py
tests/simulation/: conftest.py  test_cli.py  test_client_builder.py  test_convert.py  test_datapoint_rename.py  test_framework_targets_exposed.py  test_generation_injection.py  test_hooks.py  test_judge.py  test_orq_responses_target.py  test_resolve_target.py  test_responses_dispatch.py  test_run_store.py  test_seeded_generation.py  test_simulate_injection.py  test_target_model.py  test_tracing.py  test_types.py  test_upload_base_url.py  test_wrap_agent.py
tests/simulation/reports/: test_display.py  test_export.py  test_individual_entries.py
tests/unit/: test_execute_chat_parse.py  test_llm_jury_export.py  test_llm_jury_factory.py  test_llm_jury_helpers.py  test_llm_jury_verdict_model.py  test_no_inference.py  test_no_inference_experiment.py  test_openai_agents_target.py  test_redteam_targets.py  test_run_judge_structured.py  test_vercel_ai_sdk_target.py
