[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "src/evaluatorq" ]
include = [ "src/evaluatorq/py.typed", "src/evaluatorq/**/*.css", "src/evaluatorq/**/*.js" ]

[tool.hatch.build.targets.sdist]
exclude = [ "examples/", ".venv/", "tests/" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py", "*_test.py" ]
norecursedirs = [ ".venv", "dist", "*.egg-info" ]
markers = [
  "integration: marks tests as integration tests (require ORQ_API_KEY in .env)"
]
timeout = 120

[tool.ruff]
line-length = 120
preview = true
src = [ "src" ]

  [tool.ruff.format]
  quote-style = "single"

  [tool.ruff.lint]
  select = [
  "E",
  "F",
  "W",
  "FAST",
  "ANN",
  "ASYNC",
  "S",
  "FBT",
  "B",
  "A",
  "DTZ",
  "INT",
  "ISC",
  "LOG",
  "ICN",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "TID",
  "TC",
  "ARG",
  "PTH",
  "FLY",
  "I",
  "C90",
  "NPY",
  "PD",
  "N",
  "PERF",
  "DOC",
  "UP",
  "FURB",
  "RUF",
  "TRY"
]
  ignore = [
  "G001",
  "G002",
  "Q000",
  "Q003",
  "TRY003",
  "G004",
  "TRY002",
  "ANN401",
  "N815",
  "B904",
  "PYI063",
  "PT011",
  "B017",
  "N806",
  "ANN001",
  "ANN201",
  "ANN202",
  "ANN204",
  "C901",
  "TRY301",
  "TRY401",
  "T201",
  "G201",
  "TRY300",
  "E402",
  "ARG002",
  "F841",
  "SIM102",
  "S603",
  "S607",
  "S404",
  "ASYNC230",
  "PTH123",
  "DOC201",
  "DOC501",
  "DOC502",
  "ARG001",
  "E501",
  "S311",
  "RUF027"
]

[tool.basedpyright]
exclude = [ "examples", "scripts", ".venv", "src/evaluatorq/redteam/ui", "src/evaluatorq/simulation/ui" ]
reportIncompatibleVariableOverride = "none"
reportExplicitAny = "none"
reportMissingImports = "none"
reportAny = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeStubs = "none"
reportUnusedCallResult = "none"
reportUnannotatedClassAttribute = "none"
reportPrivateUsage = "none"
reportPrivateLocalImportUsage = "none"
reportImplicitStringConcatenation = "none"
reportUnusedImport = "none"
reportDeprecated = "none"
reportUnusedVariable = "none"
reportMissingParameterType = "none"
reportUnusedParameter = "none"
reportUnreachable = "none"
reportUnsupportedDunderAll = "none"
reportImportCycles = "none"
reportImplicitOverride = "none"
reportUnusedFunction = "none"
reportUntypedFunctionDecorator = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryTypeIgnoreComment = "none"

# FastHTML's dynamic FT components (Script, Div, NotStr, etc.) and starlette
# request injection type poorly. Scope the resulting noise to the dashboard
# package so typecheck CI stays green without loosening the global config.
[[tool.basedpyright.executionEnvironments]]
root = "src/evaluatorq/dashboard"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportGeneralTypeIssues = "none"
reportMissingTypeArgument = "none"
reportReturnType = "none"

# Dashboard tests use FastHTML components and deliberate fake section kinds /
# untyped fixture dicts — same type-noise as the package, scoped the same way.
[[tool.basedpyright.executionEnvironments]]
root = "tests/dashboard"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportGeneralTypeIssues = "none"
reportMissingTypeArgument = "none"
reportReturnType = "none"

[project]
name = "evaluatorq"
version = "1.3.2"
description = "An evaluation framework library for Python that provides a flexible way to run parallel evaluations and optionally integrate with the Orq AI platform."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "httpx>=0.28.1",
  "rich>=14.2.0",
  "loguru>=0.6.0",
  "typer>=0.12.0",
  "openai>=1.92.0,<3.0.0"
]

  [project.license]
  text = "MIT"

  [project.optional-dependencies]
  orq = [ "orq-ai-sdk>=4.4.7" ]
  otel = [
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-exporter-otlp-proto-http>=1.20.0",
  "opentelemetry-semantic-conventions>=0.41b0"
]
  langchain = [ "langchain>=1.0.0, <2.0.0" ]
  langgraph = [ "langgraph>=0.2.0" ]
  openai-agents = [ "openai-agents>=0.1.0" ]
  pydantic-ai = [ "pydantic-ai-slim[openai]>=1.0.0" ]
  crewai = [ "crewai>=0.70.0; python_version >= '3.11'" ]
  redteam = [
  "huggingface-hub>=0.20.0",
  "streamlit>=1.30.0",
  "plotly>=5.18.0",
  "watchdog>=4.0.0",
  "vl-convert-python>=1.6.0"
]
  simulation = [
  "orq-ai-sdk>=4.4.7",
  "streamlit>=1.30.0",
  "plotly>=5.18.0",
  "watchdog>=4.0.0",
  "vl-convert-python>=1.6.0"
]
  dashboard = [
  "python-fasthtml>=0.12.0,<0.13.0",
  "uvicorn>=0.30.0",
  "vl-convert-python>=1.6.0"
]
  all = [
  "evaluatorq[orq,otel,langchain,langgraph,openai-agents,pydantic-ai,crewai,redteam,simulation,dashboard]"
]

  [project.scripts]
  evaluatorq = "evaluatorq.cli:main"
  eq = "evaluatorq.cli:main"

  [project.urls]
  Homepage = "https://github.com/orq-ai/evaluatorq"
  Repository = "https://github.com/orq-ai/evaluatorq"
  Documentation = "https://orq-ai.github.io/evaluatorq/"

[tool.semantic_release]
# PSR v8+ config: version_toml points at the standard [project] version field.
# hatchling reads version from the same field, so PSR and hatchling are
# compatible — no version_source = "tag" or poetry-specific workarounds needed.
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_parser = "conventional"
# Suppress PSR's own build step (we run `uv build` separately in the workflow)
# so the action only handles versioning, changelog, and tagging. `uv` is not on
# PATH inside the PSR action container, so a non-empty build_command exits 127.
build_command = false
upload_to_vcs_release = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "feat",
  "fix",
  "perf",
  "refactor",
  "revert",
  "style",
  "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[dependency-groups]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.26.0",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.0",
  "mkdocs-section-index>=0.3.0",
  "termynal>=0.12.0",
  "mkdocs-redirects>=1.2.0",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocs-git-revision-date-localized-plugin>=1.2.9",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=1.2.0",
  "pytest-timeout>=2.3.0",
  "basedpyright>=1.21.0",
  "ruff>=0.14.3",
  "orq-ai-sdk>=4.4.7",
  "anthropic>=0.75.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-exporter-otlp-proto-http>=1.20.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langgraph>=0.2.0",
  "typer>=0.12.0",
  "pytest-cov>=7.0.0",
  "watchdog>=4.0.0",
  "openai-agents>=0.1.0",
  "vl-convert-python>=1.6.0"
]
